--- a/WebContent/formTest2.html
+++ b/WebContent/formTest2.html
@@ -5,6 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
+
+	<a href="basketList">장바구니 보기</a> <p>
+	
 	<form action="orderProc" method="post">
 		상품명 : <input type="text" name="goodsname"><br>
 		단가 : <input type="text" name="price"><br>
