--- a/WebContent/name.html
+++ b/WebContent/name.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<form action="servletConfigTest" method="post">
+	<form action="test8" method="post">
 		이름 : <input type="text" name="name"><br>
 		<input type="submit" value="전송">
 	</form>
